--- a/content_flex.html
+++ b/content_flex.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>content_flex</title>
+    <title>EFRON</title>
     <link rel="stylesheet" href="./content_flex.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
