new Self introduction

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                 <h1>Hi, I'm Efron</h1>
                 <h3 class="frontend">Frontend Developer</h3>
                 <p>
-                    目前正在學習HTML、CSS、JavaScript，未來會繼續學習MySQL、PHP、React等程式語言。
+                    您好，我叫林銘，畢業於中華科技大學航空機械系。
                 </p>
                 <p>
-                    我對前端工程師的職業抱持著熱情與期待，希望能在這個領域發揮所長。
+                    目前正積極轉職為前端工程師。對於寫程式有極大的熱忱，並希望通過程式解決問題和提升生活效率，從中獲得成就感，目前學習多種前端技術，包括HTML、CSS、JavaScript、Git、Bootstrap、Figma以及Node.js、Next.js等框架。
                 </p>
                 <p>
-                    我將努力打造出具有美感和功能性的網站，並致力於提升用戶體驗。
+                    我曾在長榮航太發動機部實習和台灣高鐵北區電車線部門、力成科技Flip Chip部門工作，這些經歷培養了我專注的工作態度、問題解決能力及良好的團隊合作與溝通技巧，這些素質在軟體開發中同樣重要。
                 </p>
                 <p>
-                    追求技術上的精湛，同時也注重團隊合作和溝通能力。
+                    目前我正在使用Next.js、Node.js、MySQL等技術，參與前後端分離的團隊開發項目，並注重團隊合作和溝通能力。
                 </p>
                 <p>
-                    希望未來能夠成為一名優秀的前端工程師，為公司的產品開發出優秀的網頁應用，實現自己的價值與夢想。
+                    希望未來能夠成為一名優秀的前端工程師，開發出高品質的網頁，並致力於優化用戶體驗。我會持續學習和精進技術，為公司和用戶帶來更好的產品。
                 </p>
             </div>
         </div>
