--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             <div class="contactleft">
                 <p>Contact Me</p>
                 <p>如有任何問題或疑問，請隨時聯絡我們。</p>
-                <p><i class='bx bx-map'></i>台北市信義區信義路五段七號</p>
-                <p><i class='bx bx-phone-call'></i>02-1234-5678</p>
-                <p><i class='bx bx-envelope'></i>example@gmail.com</p>
+                <p><i class='bx bx-map'></i>新北市三重區大同北路</p>
+                <p><i class='bx bx-phone-call'></i>0958-905-723</p>
+                <p><i class='bx bx-envelope'></i>a161026521@gmail.com</p>
             </div>
             <div class="contactright">
                 <form action="#" method="get" enctype="multipart/form-data">
