--- a/index.html
+++ b/index.html
@@ -1,176 +1,207 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EFRON</title>
-    <link rel="stylesheet" href="./content_flex.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+    <link rel="stylesheet" href="./content_flex.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div>
-        <a href="#">
-            <img class="to-top" src="./images/totop.png" alt="to-top">
-        </a>
+      <a href="#">
+        <img class="to-top" src="./images/totop.png" alt="to-top" />
+      </a>
     </div>
 
     <header>
-        <div class="logo"><a href="#"><img src="./images/efornlogo.png" alt="Efron"></a></div>
-        <div class="menu"><a href="#">Menu</a></div>
-        <nav>
-            <ol class="navbar">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#port">Portfolio</a></li>
-                <li><a href="#cont">Contact</a></li>
-            </ol>
-        </nav>
+      <div class="logo">
+        <a href="#"><img src="./images/efornlogo.png" alt="Efron" /></a>
+      </div>
+      <div class="menu"><a href="#">Menu</a></div>
+      <nav>
+        <ol class="navbar">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#port">Portfolio</a></li>
+          <li><a href="#cont">Contact</a></li>
+        </ol>
+      </nav>
     </header>
 
     <div id="about" class="top">
-        <div class="container">
-            <div class="photo"><img src="./images/selfie.jpg" alt=""></div>
-            <div class="des">
-                <h1>Hi, I'm Efron</h1>
-                <h3 class="frontend">Frontend Developer</h3>
-                <p>
-                    您好，我叫林銘，畢業於中華科技大學航空機械系。
-                </p>
-                <p>
-                    目前正積極轉職為前端工程師。對於寫程式有極大的熱忱，並希望通過程式解決問題和提升生活效率，從中獲得成就感，目前學習多種前端技術，包括HTML、CSS、JavaScript、Git、Bootstrap、Figma以及Node.js、Next.js等框架。
-                </p>
-                <p>
-                    我曾在長榮航太發動機部實習和台灣高鐵北區電車線部門、力成科技Flip Chip部門工作，這些經歷培養了我專注的工作態度、問題解決能力及良好的團隊合作與溝通技巧，這些素質在軟體開發中同樣重要。
-                </p>
-                <p>
-                    目前我正在使用Next.js、Node.js、MySQL等技術，參與前後端分離的團隊開發項目，並注重團隊合作和溝通能力。
-                </p>
-                <p>
-                    希望未來能夠成為一名優秀的前端工程師，開發出高品質的網頁，並致力於優化用戶體驗。我會持續學習和精進技術，為公司和用戶帶來更好的產品。
-                </p>
-            </div>
+      <div class="container">
+        <div class="photo"><img src="./images/selfie.jpg" alt="" /></div>
+        <div class="des">
+          <h1>Hi, I'm Efron</h1>
+          <h3 class="frontend">Frontend Developer</h3>
+          <p>您好，我叫林銘，畢業於中華科技大學航空機械系。</p>
+          <br />
+          <p>
+            對於寫程式充滿熱情，我希望通過編程來解決問題和提升生活效率，並從中獲得成就感。目前，我正在學習多種前端技術，包括
+            HTML、CSS、JavaScript、Git、Bootstrap、MySQL、Figma，以及 Node.js 和
+            Next.js 等框架。
+          </p>
+          <br />
+          <p>
+            我曾在長榮航太發動機部實習，也在台灣高鐵北區電車線部門和力成科技的
+            Flip Chip
+            部門工作過，這些經歷培養了我專注的工作態度、問題解決能力以及良好的團隊合作和溝通技巧，這些素質在軟體開發中同樣重要。
+          </p>
+          <br />
+          <p>
+            在學習過程中，我使用了 Next.js、Node.js、MySQL
+            等技術，並注重團隊合作與溝通能力。我參與了一個前後端分離的團隊開發項目，專案主題為「Mak'in
+            製噪」，這是一個音樂活動整合平台。
+          </p>
+          <br />
+          <p>
+            我希望未來能成為一名優秀的前端工程師，開發出高品質的網頁，並致力於優化用戶體驗。我會持續學習和精進技術，為公司和用戶帶來更好的產品。
+          </p>
         </div>
+      </div>
     </div>
 
     <div id="experience" class="middle">
-        <div class="container">
-            <div class="middleleft">
-                <h3>學歷</h3>
-                <div class="degree">
-                    <div>中華科技大學</div>
-                    <div>2016&nbsp;-&nbsp;2020</div>
-                    <div>航空機械系</div>
-                </div>
-            </div>
-            <div class="middleright">
-                <h3>技能</h3>
-                <div>
-                    <div class="language">
-                        <div class="languagename">HTML</div>
-                        <div class=" html">90%</div>
-                    </div>
-                    <div class="language">
-                        <div class="languagename">CSS</div>
-                        <div class=" css">80%</div>
-                    </div>
-                    <div class="language">
-                        <div class="languagename">JAVASCRIPT</div>
-                        <div class=" js">30%</div>
-                    </div>
-                </div>
-            </div>
+      <div class="container">
+        <div class="middleleft">
+          <h3>學歷</h3>
+          <div class="degree">
+            <div>中華科技大學</div>
+            <div>2016&nbsp;-&nbsp;2020</div>
+            <div>航空機械系</div>
+          </div>
         </div>
+        <div class="middleright">
+          <h3>技能</h3>
+          <div>
+            <div class="language">
+              <div class="languagename">HTML</div>
+              <div class="html">90%</div>
+            </div>
+            <div class="language">
+              <div class="languagename">CSS</div>
+              <div class="css">80%</div>
+            </div>
+            <div class="language">
+              <div class="languagename">JAVASCRIPT</div>
+              <div class="js">30%</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="bottom">
-        <div class="container">
-            <div class="skill">
-                <h2 class="sk skill1">工作經驗</h2>
-                <div class="sk skill2">2019/7~2020/4<img src="./images/EVA.png"
-                        alt="">長榮航太科技股份有限公司:<br>零件透過非破壞檢驗瑕疵，再依照工單經過焊接、水刀等製程進行修復，工單填寫及核對，協助完成主管交辦事項。
-                </div>
-                <div class="sk skill3">2020/10~2021/9<img src="./images/THSRC.png"
-                        alt="">台灣高速鐵路股份有限公司:<br>三角懸臂、滑輪組張力平衡裝置等維修保養，緊急搶修或協助現場突發狀況，儘速恢復通車營運。</div>
-                <div class="sk skill4">2021/9~2024/4 <img src="./images/PTI.png"
-                        alt="">力成科技股份有限公司:<br>主要負責包含機台三芯校正、手臂水平翻轉校正，時間上的掌握需拿捏好，以及製程改善提案等，讓產能達到最大化效益。</div>
-            </div>
+      <div class="container">
+        <div class="skill">
+          <h2 class="sk skill1">工作經驗</h2>
+          <div class="sk skill2">
+            2019/7~2020/4<img
+              src="./images/EVA.png"
+              alt=""
+            />長榮航太科技股份有限公司:<br />零件透過非破壞檢驗瑕疵，再依照工單經過焊接、水刀等製程進行修復，工單填寫及核對，協助完成主管交辦事項。
+          </div>
+          <div class="sk skill3">
+            2020/10~2021/9<img
+              src="./images/THSRC.png"
+              alt=""
+            />台灣高速鐵路股份有限公司:<br />三角懸臂、滑輪組張力平衡裝置等維修保養，緊急搶修或協助現場突發狀況，儘速恢復通車營運。
+          </div>
+          <div class="sk skill4">
+            2021/9~2024/4
+            <img
+              src="./images/PTI.png"
+              alt=""
+            />力成科技股份有限公司:<br />主要負責包含機台三芯校正、手臂水平翻轉校正，時間上的掌握需拿捏好，以及製程改善提案等，讓產能達到最大化效益。
+          </div>
         </div>
+      </div>
     </div>
 
     <div id="port" class="portfolio">
-        <div class="container">
-            <div class="card pic1">
-                <img src="./images/nightstreet.jpg" alt="night-street">
-                <div class="mask mask1">日本夜景</div>
-            </div>
-
-            <div class="card pic2">
-                <img src="./images/sushi.jpg" alt="sushi">
-                <div class="mask mask2">壽司</div>
-            </div>
-
-            <div class="card pic3">
-                <img src="./images/station.jpg" alt="station">
-                <div class="mask mask3">日本車站</div>
-            </div>
-
-            <div class="card pic4">
-                <img src="./images/tokyotower.jpg" alt="tokyo-tower">
-                <div class="mask4">
-                    <div>東京鐵塔</div>
-                </div>
-            </div>
-
-            <div class="card pic5">
-                <img src="./images/fuji.jpg" alt="fuji">
-                <div class="mask mask5">富士山</div>
-            </div>
-
-            <div class="card pic6">
-                <img src="./images/duck.jpg" alt="duck">
-                <div class="mask mask6">黃昏小鴨</div>
-            </div>
-
-            <div class="card pic7">
-                <img src="./images/temple.jpg" alt="temple">
-                <div class="mask mask7">神社</div>
-            </div>
-
-            <div class="card pic8">
-                <img src="./images/dango.jpg" alt="dan-go">
-                <div class="mask mask8">團子</div>
-            </div>
-
+      <div class="container">
+        <div class="card pic1">
+          <img src="./images/nightstreet.jpg" alt="night-street" />
+          <div class="mask mask1">日本夜景</div>
         </div>
+
+        <div class="card pic2">
+          <img src="./images/sushi.jpg" alt="sushi" />
+          <div class="mask mask2">壽司</div>
+        </div>
+
+        <div class="card pic3">
+          <img src="./images/station.jpg" alt="station" />
+          <div class="mask mask3">日本車站</div>
+        </div>
+
+        <div class="card pic4">
+          <img src="./images/tokyotower.jpg" alt="tokyo-tower" />
+          <div class="mask4">
+            <div>東京鐵塔</div>
+          </div>
+        </div>
+
+        <div class="card pic5">
+          <img src="./images/fuji.jpg" alt="fuji" />
+          <div class="mask mask5">富士山</div>
+        </div>
+
+        <div class="card pic6">
+          <img src="./images/duck.jpg" alt="duck" />
+          <div class="mask mask6">黃昏小鴨</div>
+        </div>
+
+        <div class="card pic7">
+          <img src="./images/temple.jpg" alt="temple" />
+          <div class="mask mask7">神社</div>
+        </div>
+
+        <div class="card pic8">
+          <img src="./images/dango.jpg" alt="dan-go" />
+          <div class="mask mask8">團子</div>
+        </div>
+      </div>
     </div>
 
     <div id="cont" class="contact">
-        <div class="container">
-            <div class="contactleft">
-                <p>Contact Me</p>
-                <p>如有任何問題或疑問，請隨時聯絡我們。</p>
-                <p><i class='bx bx-map'></i>新北市三重區大同北路</p>
-                <p><i class='bx bx-phone-call'></i>0958-905-723</p>
-                <p><i class='bx bx-envelope'></i>a161026521@gmail.com</p>
-            </div>
-            <div class="contactright">
-                <form action="#" method="get" enctype="multipart/form-data">
-                    <label>姓名<input class="formtext" type="text" name="account"></label>
-                    <label class="email">Email<input class="formtext" type="text" name="email"></label>
-                    <label>電話<input class="formtext" type="text" name="phone"></label>
-                    <label>訊息<textarea class="formtextarea" name="message"></textarea></label>
-                    <input class="formbtn" type="submit" value="確定送出">
-                </form>
-            </div>
+      <div class="container">
+        <div class="contactleft">
+          <p>Contact Me</p>
+          <p>如有任何問題或疑問，請隨時聯絡我們。</p>
+          <p><i class="bx bx-map"></i>新北市三重區大同北路</p>
+          <p><i class="bx bx-phone-call"></i>0958-905-723</p>
+          <p><i class="bx bx-envelope"></i>a161026521@gmail.com</p>
         </div>
+        <div class="contactright">
+          <form action="#" method="get" enctype="multipart/form-data">
+            <label
+              >姓名<input class="formtext" type="text" name="account"
+            /></label>
+            <label class="email"
+              >Email<input class="formtext" type="text" name="email"
+            /></label>
+            <label
+              >電話<input class="formtext" type="text" name="phone"
+            /></label>
+            <label
+              >訊息<textarea class="formtextarea" name="message"></textarea>
+            </label>
+            <input class="formbtn" type="submit" value="確定送出" />
+          </form>
+        </div>
+      </div>
     </div>
 
     <footer>
-        <div class="container">
-            <div class="copyright">Copyright&copy;2023&nbsp;&nbsp;Efron.com</div>
+      <div class="container">
+        <div class="copyright">Copyright&copy;2023&nbsp;&nbsp;Efron.com</div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
