--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
           <p>
             在學習過程中，我使用了 Next.js、Node.js、MySQL
             等技術，並注重團隊合作與溝通能力。我參與了一個前後端分離的團隊開發項目，專案主題為「Mak'in
-            製噪」，這是一個音樂活動整合平台。
+            製噪」，這是一個音樂活動整合平台，並且將 MySQL 部署到 Aiven，Next.js
+            和 Node.js 應用部署到 Vercel，並通過 CI/CD
+            持續整合和持續部署流程來管理這些部署過程，專案成果放置下方可供瀏覽體驗。
           </p>
           <br />
           <p>
@@ -113,11 +115,19 @@
             />台灣高速鐵路股份有限公司:<br />三角懸臂、滑輪組張力平衡裝置等維修保養，緊急搶修或協助現場突發狀況，儘速恢復通車營運。
           </div>
           <div class="sk skill4">
-            2021/9~2024/4
+            2021/9~2024/3
             <img
               src="./images/PTI.png"
               alt=""
             />力成科技股份有限公司:<br />主要負責包含機台三芯校正、手臂水平翻轉校正，時間上的掌握需拿捏好，以及製程改善提案等，讓產能達到最大化效益。
+          </div>
+          <div class="sk skill5">
+            2024/3~2024/8
+            <img
+              src="./images/iSpan.png"
+              alt=""
+            />資展國際股份有限公司:<br />參加「前端工程師」訓練課程，為期六個月共 588
+            小時，研習期滿並考試及格以及專題發表，充分掌握了前端開發的核心技能。
           </div>
         </div>
       </div>
